--- a/config/AFNO.yaml
+++ b/config/AFNO.yaml
@@ -7,7 +7,7 @@ full_field: &FULL_FIELD
   dt: 1 # how many timesteps ahead the model will predict
   n_history: 0 #how many previous timesteps to consider
   prediction_type: 'iterative'
-  prediction_length: 41 #applicable only if prediction_type == 'iterative'
+  prediction_length: 30 # 41 #applicable only if prediction_type == 'iterative'
   n_initial_conditions: 5 #applicable only if prediction_type == 'iterative'
   ics_type: "default"
   save_raw_forecasts: !!bool True
@@ -22,6 +22,7 @@ full_field: &FULL_FIELD
   max_epochs: 50
   batch_size: 64
 
+
   #afno hyperparams
   num_blocks: 8
   nettype: 'afno'
@@ -33,10 +34,10 @@ full_field: &FULL_FIELD
   in_channels: [0,1]
   out_channels: [0,1] #must be same as in_channels if prediction_type == 'iterative'
   normalization: 'zscore' #options zscore (minmax not supported) 
-  train_data_path: '/pscratch/sd/j/jpathak/wind/train'
-  valid_data_path: '/pscratch/sd/j/jpathak/wind/test'
-  inf_data_path: '/pscratch/sd/j/jpathak/wind/out_of_sample' # test set path for inference
-  exp_dir: '/pscratch/sd/j/jpathak/ERA5_expts_gtc/wind'
+  train_data_path: '/content/ccai_demo/data'
+  valid_data_path: '/content/ccai_demo/data'
+  inf_data_path: '/content/ccai_demo/data/FCN_ERA5_data_v0/out_of_sample' # test set path for inference
+  exp_dir: '/content/ccai_demo/data'
   time_means_path:   '/pscratch/sd/j/jpathak/wind/time_means.npy'
   global_means_path: '/pscratch/sd/j/jpathak/wind/global_means.npy'
   global_stds_path:  '/pscratch/sd/j/jpathak/wind/global_stds.npy'
@@ -70,18 +71,18 @@ afno_backbone: &backbone
   out_channels: [0, 1 ,2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
   orography: !!bool False
   orography_path: None 
-  exp_dir: '/pscratch/sd/s/shas1693/results/era5_wind'
-  train_data_path: '/pscratch/sd/s/shas1693/data/era5/train'
-  valid_data_path: '/pscratch/sd/s/shas1693/data/era5/test'
-  inf_data_path:   '/pscratch/sd/s/shas1693/data/era5/out_of_sample'
-  time_means_path:   '/pscratch/sd/s/shas1693/data/era5/time_means.npy'
-  global_means_path: '/pscratch/sd/s/shas1693/data/era5/global_means.npy'
-  global_stds_path:  '/pscratch/sd/s/shas1693/data/era5/global_stds.npy'
+  exp_dir: '/content/ccai_demo/data'
+  train_data_path: '/content/ccai_demo/data'
+  valid_data_path: '/content/ccai_demo/data'
+  inf_data_path:   '/content/ccai_demo/data/FCN_ERA5_data_v0/out_of_sample'
+  time_means_path:   '/content/ccai_demo/additional/stats_v0/precip/time_means.npy'
+  global_means_path: '/content/ccai_demo/additional/stats_v0/global_means.npy'
+  global_stds_path:  '/content/ccai_demo/additional/stats_v0/global_stds.npy'
 
 afno_backbone_orography: &backbone_orography 
   <<: *backbone
   orography: !!bool True
-  orography_path: '/pscratch/sd/s/shas1693/data/era5/static/orography.h5'
+  orography_path: '/content/ccai_demo/data/FCN_ERA5_data_v0/out_of_sample'
 
 afno_backbone_finetune: 
   <<: *backbone
@@ -91,7 +92,7 @@ afno_backbone_finetune:
   max_epochs: 50
   pretrained: !!bool True
   two_step_training: !!bool True
-  pretrained_ckpt_path: '/pscratch/sd/s/shas1693/results/era5_wind/afno_backbone/0/training_checkpoints/best_ckpt.tar'
+  pretrained_ckpt_path: '/content/ccai_demo/model_weights/FCN_weights_v0/backbone.ckpt'
 
 perturbations:
   <<: *backbone
@@ -100,7 +101,7 @@ perturbations:
   max_epochs: 50
   pretrained: !!bool True
   two_step_training: !!bool True
-  pretrained_ckpt_path: '/pscratch/sd/j/jpathak/ERA5_expts_gtc/wind/afno_20ch_bs_64_lr5em4_blk_8_patch_8_cosine_sched/1/training_checkpoints/best_ckpt.tar'
+  pretrained_ckpt_path: '/content/ccai_demo/model_weights/FCN_weights_v0/backbone.ckpt'
   prediction_length: 24
   ics_type: "datetime"
   n_perturbations: 100 
@@ -109,7 +110,7 @@ perturbations:
   save_raw_forecasts: !!bool False
   date_strings: ["2018-01-01 00:00:00"] 
   inference_file_tag: " "
-  valid_data_path: "/pscratch/sd/j/jpathak/ "
+  valid_data_path: "/content/ccai_demo/data"
   perturb: !!bool True
   n_level: 0.3
 
@@ -124,8 +125,8 @@ precip: &precip
   lr: 2.5E-4
   batch_size: 64
   max_epochs: 25
-  precip: '/pscratch/sd/p/pharring/ERA5/precip/total_precipitation'
-  time_means_path_tp: '/pscratch/sd/p/pharring/ERA5/precip/total_precipitation/time_means.npy'
-  model_wind_path: '/pscratch/sd/s/shas1693/results/era5_wind/afno_backbone_finetune/0/training_checkpoints/best_ckpt.tar'
+  precip: '/content/drive/MyDrive/FourCastNet/data/precip/out_of_sample'
+  time_means_path_tp: '/content/ccai_demo/additional/stats_v0/precip/time_means.npy'
+  model_wind_path: '/content/ccai_demo/model_weights/FCN_weights_v0/backbone.ckpt'
   precip_eps: !!float 1e-5
 
